// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionSheet > ActionSheet alignVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="action-sheet-demo"
    data-v-10b85410=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-10b85410=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        居中列表型
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-10b85410=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        左对齐列表型
        
      </span>
      <!---->
    </button>
  </div>
  <!--v-if-->
  <!--v-if-->
  
</div>
`;

exports[`ActionSheet > ActionSheet gridMultipleVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="action-sheet-demo"
    data-v-1719f7aa=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-1719f7aa=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        宫格型-多页
        
      </span>
      <!---->
    </button>
  </div>
  <!--v-if-->
  
</div>
`;

exports[`ActionSheet > ActionSheet gridVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="action-sheet-demo"
    data-v-06f7cca3=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-06f7cca3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        常规宫格型
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-06f7cca3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        带描述宫格型
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-06f7cca3=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        带徽标宫格型
        
      </span>
      <!---->
    </button>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  
</div>
`;

exports[`ActionSheet > ActionSheet listVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="action-sheet-demo"
    data-v-443785fb=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-443785fb=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        常规列表型
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-443785fb=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        函数调用
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-443785fb=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        带描述列表型
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-443785fb=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        带图标列表型
        
      </span>
      <!---->
    </button>
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-443785fb=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        带徽标列表型
        
      </span>
      <!---->
    </button>
  </div>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
  
</div>
`;

exports[`ActionSheet > ActionSheet mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    ActionSheet 动作面板
  </h1>
  <p
    class="summary"
  >
    从底部弹出的模态框，提供和当前场景相关的操作动作，也支持提供信息输入和描述。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        列表型
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="action-sheet-demo"
        data-v-443785fb=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-443785fb=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            常规列表型
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-443785fb=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            函数调用
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-443785fb=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            带描述列表型
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-443785fb=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            带图标列表型
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-443785fb=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            带徽标列表型
            
          </span>
          <!---->
        </button>
      </div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        宫格型动作面板
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="action-sheet-demo"
        data-v-06f7cca3=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-06f7cca3=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            常规宫格型
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-06f7cca3=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            带描述宫格型
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-06f7cca3=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            带徽标宫格型
            
          </span>
          <!---->
        </button>
      </div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      
      
      <div
        class="action-sheet-demo"
        data-v-1719f7aa=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-1719f7aa=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            宫格型-多页
            
          </span>
          <!---->
        </button>
      </div>
      <!--v-if-->
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        列表型选项状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="action-sheet-demo"
        data-v-4c697e0f=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-4c697e0f=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            列表型选项状态
            
          </span>
          <!---->
        </button>
      </div>
      <!--v-if-->
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        列表型对齐方式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="action-sheet-demo"
        data-v-10b85410=""
      >
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-10b85410=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            居中列表型
            
          </span>
          <!---->
        </button>
        <button
          aria-disabled="false"
          class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
          data-v-10b85410=""
          role="button"
          type="button"
        >
          <!---->
          <span
            class="t-button__content"
          >
            
            左对齐列表型
            
          </span>
          <!---->
        </button>
      </div>
      <!--v-if-->
      <!--v-if-->
      
      
    </div>
  </div>
</div>
`;

exports[`ActionSheet > ActionSheet statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="action-sheet-demo"
    data-v-4c697e0f=""
  >
    <button
      aria-disabled="false"
      class="t-button t-button--size-medium t-button--outline t-button--primary t-button--rectangle t-button--block"
      data-v-4c697e0f=""
      role="button"
      type="button"
    >
      <!---->
      <span
        class="t-button__content"
      >
        
        列表型选项状态
        
      </span>
      <!---->
    </button>
  </div>
  <!--v-if-->
  
</div>
`;
